--- a/lib/src/hero_list_component.html
+++ b/lib/src/hero_list_component.html
@@ -1,10 +1,19 @@
 
 <h2>Heroes</h2>
+<div>
+  <label>Hero name:</label> <input #heroName />
+  <button (click)="add(heroName.value)">
+    Add
+  </button>
+</div>
 <ul class="heroes">
   <li *ngFor="let hero of heroes"
     [class.selected]="hero == selected"
     (click)="onSelect(hero)">
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
+    <span class="badge">{{hero.id}}</span> 
+    {{hero.name}}
+    <button class="delete"
+    (click)="delete(hero, $event)">x</button>
   </li>
 </ul>
 <div *ngIf="selected.id != 0">
